--- a/bg-generator/style.css
+++ b/bg-generator/style.css
@@ -23,5 +23,9 @@ h3 {
     text-align: center;
     text-transform: none;
     letter-spacing: 0.01em;
-
+    border: 1px solid gray;
+    background: whitesmoke;
+    margin: 0 auto;
+    padding: 10px;
+    width: 50vw;
 }
