--- a/bg-generator/style.css
+++ b/bg-generator/style.css
@@ -1,5 +1,6 @@
 body {
-	font: 'Raleway', sans-serif;
+	height: 100vh;
+    font: 'Raleway', sans-serif;
     color: rgba(0,0,0,.5);
     text-align: center;
     text-transform: uppercase;
